[gd_scene load_steps=4 format=3 uid="uid://cdebq8utbitln"]

[ext_resource type="Script" path="res://Menu/start_scene.gd" id="1_uhjqc"]
[ext_resource type="Texture2D" uid="uid://5yrt3nd4fxs4" path="res://Menu/wallpaperflare.com_wallpaper.jpg" id="2_mmj3u"]
[ext_resource type="AudioStream" uid="uid://c64638yxipeer" path="res://Menu/assets/RPG Medieval Fantasy - Off To New Shores.mp3" id="3_lbenj"]

[node name="start-scene" type="Node2D"]
script = ExtResource("1_uhjqc")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(640, 359.75)
scale = Vector2(0.666667, 0.66713)
texture = ExtResource("2_mmj3u")

[node name="Play" type="Button" parent="."]
offset_left = 645.0
offset_top = 141.0
offset_right = 717.0
offset_bottom = 172.0
text = "Play"

[node name="Quit" type="Button" parent="."]
offset_left = 645.0
offset_top = 224.0
offset_right = 717.0
offset_bottom = 255.0
text = "Quit"

[node name="Credits" type="Button" parent="."]
offset_left = 20.0
offset_top = 601.0
offset_right = 92.0
offset_bottom = 632.0
text = "Credits"

[node name="Test Area" type="Button" parent="."]
offset_left = 645.0
offset_top = 309.0
offset_right = 717.0
offset_bottom = 340.0
text = "Test
"

[node name="Roger" type="Button" parent="."]
offset_left = 491.0
offset_top = 604.0
offset_right = 563.0
offset_bottom = 635.0
text = "Roger
"

[node name="Katie" type="Button" parent="."]
offset_left = 599.0
offset_top = 607.0
offset_right = 671.0
offset_bottom = 638.0
text = "Katie"

[node name="Brenda" type="Button" parent="."]
offset_left = 686.0
offset_top = 607.0
offset_right = 758.0
offset_bottom = 638.0
text = "Brenda"

[node name="Dakota" type="Button" parent="."]
offset_left = 773.0
offset_top = 603.0
offset_right = 845.0
offset_bottom = 634.0
text = "Dakota"

[node name="Don" type="Button" parent="."]
offset_left = 855.0
offset_top = 604.0
offset_right = 927.0
offset_bottom = 635.0
text = "Don"

[node name="MusicPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_lbenj")
volume_db = -20.0

[connection signal="pressed" from="Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="Test Area" to="." method="_on_test_area_pressed"]
[connection signal="pressed" from="Roger" to="." method="_on_roger_pressed"]
[connection signal="pressed" from="Katie" to="." method="_on_katie_pressed"]
[connection signal="pressed" from="Brenda" to="." method="_on_brenda_pressed"]
[connection signal="pressed" from="Dakota" to="." method="_on_dakota_pressed"]
[connection signal="pressed" from="Don" to="." method="_on_don_pressed"]
